--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/Vaitsehovskiy-Tony/mesto-2/issues"
   },
-  "homepage": "https://github.com/Vaitsehovskiy-Tony/mesto-2#readme",
+  "homepage": "https://vaitsehovskiy-tony.github.io/mesto-2/",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
@@ -27,6 +28,7 @@
     "cssnano": "^5.0.6",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^2.1.0",
