--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "autoprefixer": "^10.3.1",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.1.0",
     "cssnano": "^5.0.6",
